# prometheus-mcp-server

./: .gitignore  README.md  pyproject.toml
src/prometheus_mcp_server/: server.py
tests/: test_tools.py
